--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-539-simple-house
 							<div class="col-md-6">
 								<div class="tm-description-box"> 
 									<h4 class="tm-gallery-title">Proyecto Señor de la Soledad</h4>
-									<p class="tm-mb-45">Representación de la Iglesia y el lugar</p>
+									<p class="tm-mb-45">Representación de la Iglesia y el lugar, también se realizó un juego virtual represntando de manera digital los lugares.</p>
 								</div>
 							</div>
 						</div>
@@ -175,7 +175,7 @@ https://templatemo.com/tm-539-simple-house
 							<div class="col-md-6">
 								<div class="tm-description-box"> 
 									<h4 class="tm-gallery-title">Proyecto Virgen del Carmen</h4>
-									<p class="tm-mb-45">Representación de la Iglesia y el lugar</p>
+									<p class="tm-mb-45">Representación de la Iglesia y el lugar, también se realizó un juego virtual represntando de manera digital los lugares.</p>
 								</div>
 							</div>
 						</div>
@@ -206,11 +206,12 @@ https://templatemo.com/tm-539-simple-house
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
-							<img src="img/gallery/09.png" alt="Image" class="img-fluid tm-gallery-img" />
+							
 							<figcaption>
 								<h4 class="tm-gallery-title">Bailes</h4>
 								<p class="tm-gallery-description">Las celebraciones en honor a la Virgen de la Candelaria presentan danzas típicas como la Diablada y la Morenada, que combinan elementos religiosos con tradiciones ancestrales.</p>
 							</figcaption>
+							<img src="img/gallery/09.png" alt="Image" class="img-fluid tm-gallery-img" />
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
@@ -234,7 +235,7 @@ https://templatemo.com/tm-539-simple-house
 							<div class="col-md-6">
 								<div class="tm-description-box"> 
 									<h4 class="tm-gallery-title">Proyecto Virgen de la Candelaria</h4>
-									<p class="tm-mb-45">Representación de la Iglesia y el lugar</p>
+									<p class="tm-mb-45">Representación de la Iglesia y el lugar, también se realizó un juego virtual represntando de manera digital los lugares.</p>
 								</div>
 							</div>
 						</div>
